# Function-Level-Compiler-Optimization-Autotuner

./: .gitmodules  README.md  setup.py
plugin/: CMakeLists.txt  build.sh
plugin/include/: config_parser.h  get_arg_config.h
plugin/src/: config_parser.cpp  cxx_optimizer.cpp  get_arg_config.cpp
scripts/: create_gcc_release.sh
tools/: create_project_optimization_entries.py  tune_project.py
tools/implementations/builders/: cmake_project_builder.py  makefile_builder.py  source_file_builder.py  spec_builder.py
tools/implementations/profilers/: binary_file_profiler.py  spec_profiler.py
tools/implementations/runners/: averaging_runner.py  binary_file_runner.py  spec_runner.py
tools/implementations/utils/: perf.py
tools/interfaces/: builder.py  profiler.py  runner.py
tools/services/: compiler_optimizations_tuner.py  cpu_info.py  gcc_plugin_support.py  iterative_tuner.py  optimal_optimization_entries.py
